@@ -1,13 +1,18 @@
 package com.study.base.boot.aggregations.v1.order.application;
 
 import com.study.base.boot.aggregations.v1.order.application.dto.req.CreateOrder;
-import com.study.base.boot.aggregations.v1.order.domain.OrderAggregate;
+import com.study.base.boot.aggregations.v1.order.domain.entity.OrderAggregate;
+import com.study.base.boot.aggregations.v1.order.domain.enumerations.OrderStatusEnum;
 import com.study.base.boot.aggregations.v1.order.infrastructure.repository.OrderRepository;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,26 +23,44 @@ public class OrderService {
 
     @Transactional
     public void create(CreateOrder createOrder) {
-        final var orderAggregate = OrderAggregate
-                .builder()
-                .build()
-                .patch(createOrder)
-                .create(orderRepository);
+        final var orderAggregate = OrderAggregate.builder().build().patch(createOrder).create(orderRepository);
     }
 
     @Transactional
-    public List<Long> createOrders(List<CreateOrder> createOrderList) {
-        List<OrderAggregate> orders = createOrderList
-                .stream()
-                .map(createOrder -> OrderAggregate
-                        .builder()
-                        .build()
-                        .patch(createOrder))
-                .toList();
-        return OrderAggregate
-                .saveAll(orderRepository, orders)
-                .stream()
-                .map(OrderAggregate::getId)
-                .collect(Collectors.toList());
+    public List<Long> creates(List<CreateOrder> createOrders) {
+        final var orders = OrderAggregate.creates(orderRepository, createOrders);
+
+        return orders.stream().map(OrderAggregate::getId).collect(Collectors.toList());
     }
+
+    @Transactional(readOnly = true)
+    public OrderAggregate get(long id) {
+        Optional<OrderAggregate> byId = orderRepository.findById(id);
+        OrderAggregate orderAggregate = byId.orElseGet(null);
+
+        return orderAggregate;
+    }
+
+    @Transactional(readOnly = true)
+    public Page<OrderAggregate> listByStatus(OrderStatusEnum orderStatus,
+                                             Pageable pageable) {
+        Page<OrderAggregate> allByStatus = orderRepository.findAllByStatus(orderStatus, pageable);
+
+        return allByStatus;
+    }
+
+    public Page<OrderAggregate> findAllByCreatedDateBetweenAndPriceBetween(LocalDateTime periodFrom,
+                                                                           LocalDateTime periodTo,
+                                                                           int minPrice,
+                                                                           int maxPrice,
+                                                                           Pageable pageable) {
+        Page<OrderAggregate> allByConditions = orderRepository.findAllByCreatedDateBetweenAndPriceBetween(periodFrom,
+                                                                                                          periodTo,
+                                                                                                          minPrice,
+                                                                                                          maxPrice,
+                                                                                                          pageable);
+        return allByConditions;
+    }
+
+
 }
